src/test/ui/lifetimes/issue-79187-2.stderr
error[E0277]: the trait bound `[closure@$DIR/issue-79187-2.rs:8:14: 8:17]: Foo` is not satisfied
  --> $DIR/issue-79187-2.rs:8:5
   |
LL |     take_foo(|a| a);
   |     ^^^^^^^^ --- consider calling this closure
   |     |
   |     the trait `Foo` is not implemented for `[closure@$DIR/issue-79187-2.rs:8:14: 8:17]`
   |
note: required by a bound in `take_foo`
  --> $DIR/issue-79187-2.rs:5:21
   |
LL | fn take_foo(_: impl Foo) {}
   |                     ^^^ required by this bound in `take_foo`

error[E0277]: the trait bound `[closure@$DIR/issue-79187-2.rs:11:14: 11:23]: Foo` is not satisfied
  --> $DIR/issue-79187-2.rs:11:5
   |
LL |     take_foo(|a: &i32| a);
   |     ^^^^^^^^ the trait `Foo` is not implemented for `[closure@$DIR/issue-79187-2.rs:11:14: 11:23]`
   |
note: required by a bound in `take_foo`
  --> $DIR/issue-79187-2.rs:5:21
   |
LL | fn take_foo(_: impl Foo) {}
   |                     ^^^ required by this bound in `take_foo`

error[E0277]: the trait bound `[closure@$DIR/issue-79187-2.rs:14:14: 14:31]: Foo` is not satisfied
  --> $DIR/issue-79187-2.rs:14:5
   |
LL |     take_foo(|a: &i32| -> &i32 { a });
   |     ^^^^^^^^ the trait `Foo` is not implemented for `[closure@$DIR/issue-79187-2.rs:14:14: 14:31]`
   |
note: required by a bound in `take_foo`
  --> $DIR/issue-79187-2.rs:5:21
   |
LL | fn take_foo(_: impl Foo) {}
   |                     ^^^ required by this bound in `take_foo`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
